# huefy-sdk-rust

./: Cargo.toml  README.md
sdk-lab/: README.md  run.rs
src/: client.rs  config.rs  email_client.rs  lib.rs
src/errors/: error_code.rs  huefy_error.rs  mod.rs  sanitizer.rs
src/http/: circuit_breaker.rs  client.rs  mod.rs  retry.rs
src/models/: email.rs
src/security/: hmac_sign.rs  mod.rs  pii.rs
src/utils/: logger.rs  mod.rs  version.rs
src/validators/: email.rs  mod.rs
tests/: circuit_breaker_test.rs  email_validators_test.rs  security_test.rs
