[package]
name = "huefy"
version = "1.0.0"
edition = "2021"
description = "Huefy - Official Rust SDK"
license = "MIT"
repository = "https://github.com/teracrafts/huefy"
keywords = ["sdk", "api", "huefy"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"
